update/ I created folder services, types and firebase URL link in categories

--- a/src/components/layout/Footer/style.scss
+++ b/src/components/layout/Footer/style.scss
@@ -1,7 +1,7 @@
 footer{
   padding: 1.5em;
   font-size: 1em;
-  background-color: black;
+  background-image: linear-gradient(to right, #ffd64f1a, #d400f970);
   color: white;
   .container{
     div{
