--- a/src/components/layout/Header/style.scss
+++ b/src/components/layout/Header/style.scss
@@ -1,11 +1,11 @@
-nav {
+.header-style {
+    background-image: linear-gradient(to right, #ffd64f1a, #d400f970);
     .container{
         .logo{
+            margin-right: 0.5em;
             font-size: 2em;
-            color:red;
+            color: #f2c328;
             font-family: 'Righteous', cursive;
-
         }
-
     }
 }
