--- a/src/components/layout/Footer/style.scss
+++ b/src/components/layout/Footer/style.scss
@@ -1,4 +1,7 @@
 footer{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
   padding: 1.5em;
   font-size: 1em;
   background-image: linear-gradient(to right, #ffd64f1a, #d400f970);
