--- a/src/pages/Categories/style.scss
+++ b/src/pages/Categories/style.scss
@@ -19,11 +19,22 @@
     }
   
     a:hover {
-    // color: #fff;
     background-image: linear-gradient(to right, #d400f960, #ffd64f64);
     }
     
 }
 }
+.container-table{
+    border: solid 1px rgba(188, 184, 184, 0.242);
+    border-radius: 0.5em;
+    padding: 2em;
+    box-shadow: #80808091 2px 10px 20px;
+    margin-bottom: 2em;
+}
+
+    .btn-tabla{
+    margin-right: 0.5em;
+}
+
 
    
