--- a/src/components/layout/Nav/style.scss
+++ b/src/components/layout/Nav/style.scss
@@ -2,7 +2,9 @@
         a{
         all: unset;
         border-radius: 3em;
-        border: solid #D500F9 2px;
+        // border: solid #D500F9 2px;
+        border: 1px solid #d7a4de;
+        box-shadow: 2px 3px#ac84b1;
         color: #fff;
         cursor: pointer;
         padding: 0.5em 1em;
