--- a/src/components/forms/CardAdd/style.scss
+++ b/src/components/forms/CardAdd/style.scss
@@ -1,4 +1,4 @@
-.container-card-add {
+.container-card-add{
   border: solid 1px rgba(188, 184, 184, 0.242);
   border-radius: 0.5em;
   padding: 2em;
@@ -26,4 +26,8 @@
       background-image: linear-gradient(to right, #d400f960, #ffd64f64);
     }
   }
+}
+
+.container-card-add.dark{
+  background-color: rgb(156, 152, 176);
 }
