--- a/src/components/forms/CardAdd/style.scss
+++ b/src/components/forms/CardAdd/style.scss
@@ -4,14 +4,14 @@
   padding: 2em;
   box-shadow: #80808091 2px 10px 20px;
   margin-bottom: 2em;
-  form {
-    input {
-      border-radius: 3em;
-      border: solid #d500f9 2px;
-      padding-left: 1em;
-      margin-bottom: 1em;
-    }
-  }
+  // form {
+  //   input {
+  //     border-radius: 3em;
+  //     border: solid #d500f9 2px;
+  //     padding-left: 1em;
+  //     margin-bottom: 1em;
+  //   }
+  // }
   .btn-save {
     a {
       all: unset;
